[package]
name = "sigserlic"
version = "0.2.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/deadbaed/sigserlic"
description = "Combine serde with signify"
keywords = ["signify", "serde", "license"]

[features]
default = ["generate"]
generate = ["dep:rand_core"]

[dependencies]
# core
libsignify = { version = "0.6", features = ["std"] }
serde = { version = "1", features = ["derive"] }
jiff = "0.2"
snafu = "0.8"

# serde helpers
base64ct = { version = "1", features = ["std"] }
bincode = { version = "2", features = ["serde"] }

# key generation
rand_core = { version = "0.6", optional = true, features = ["std"] }

[dev-dependencies]
serde_json = "1"
ciborium = "0.2"

[package.metadata.docs.rs]
all-features = true
# enable unstable features in the documentation https://stackoverflow.com/a/61417700/4809297
rustdoc-args = ["--cfg", "docsrs"]
